2 Project pages filled
filled Responsive Web and Mobile Prototype

--- a/index.html
+++ b/index.html
@@ -20,27 +20,19 @@
       
     </header>
     <nav>
-      <!-- <form action="index.html">
-        <button class="nav-button">Home</button>
-      </form>
-      <form action="index.html">
-        <button class="nav-button">Home</button>
-      </form>
-      <form action="index.html">
-        <button class="nav-button">Home</button>
-      </form> -->
       <div class="nav-left">
-        <h1>JG</h1>
+        <a href=""><h1>JG</h1></a>
+        <a href=""><img src="./img/cursor-white-hover.svg"></a>
       </div>
       <div class="nav-right">
         <ul>
           <li class="checked"><a href="">Portfolio, </a></li>
-          <li><a href="">Portfolio, </a></li>
-          <li><a href="">Portfolio, </a></li>
-          <li><a href="">Archive</a></li>
+          <li><a href="">Arcana Mini App, </a></li>
+          <li><a href="./html/responsiveweb.html"">Responsive Web, </a></li>
+          <li><a href="./html/mobileprototype.html">Mobile Prototype, </a></li>
+          <li><a href="./html/archive.html">Archive</a></li>
         </ul>
       </div>
-      
     </nav>
 
     <div class="body-box">
