Arcana Mini page
filled project page, made some css adjustments to margins

--- a/html/mobileprototype.html
+++ b/html/mobileprototype.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
-    <title>Jasper Gass - Archive</title>
+    <title>Jasper Gass - Mobile Prototype</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link href="../css/main.css" rel="stylesheet">
     <link href="../css/flexbox.css" rel="stylesheet">
@@ -27,10 +27,10 @@
       <div class="nav-right">
         <ul>
             <li class="checked"><a href="../index.html">Portfolio, </a></li>
-            <li><a href="">Arcana Mini App, </a></li>
+            <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
             <li><a href="../html/responsiveweb.html"">Responsive Web, </a></li>
             <li><a href="../html/mobileprototype.html">Mobile Prototype, </a></li>
-          <li><a href="../archive.html">Archive</a></li>
+          <li><a href="../html/archive.html">Archive</a></li>
         </ul>
       </div>
     </nav>
