--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="nav-right">
         <ul>
           <li class="checked"><a href="">Portfolio, </a></li>
-          <li><a href="">Arcana Mini App, </a></li>
+          <li><a href="./html/arcanamini.html">Arcana Mini App, </a></li>
           <li><a href="./html/responsiveweb.html"">Responsive Web, </a></li>
           <li><a href="./html/mobileprototype.html">Mobile Prototype, </a></li>
           <li><a href="./html/archive.html">Archive</a></li>
