--- a/html/archive.html
+++ b/html/archive.html
@@ -27,10 +27,10 @@
       <div class="nav-right">
         <ul>
             <li class="checked"><a href="../index.html">Portfolio, </a></li>
-            <li><a href="">Arcana Mini App, </a></li>
+            <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
             <li><a href="../html/responsiveweb.html">Responsive Web, </a></li>
             <li><a href="../html/mobileprototype.html">Mobile Prototype, </a></li>
-          <li><a href="../archive.html">Archive</a></li>
+          <li><a href="../html/archive.html">Archive</a></li>
         </ul>
       </div>
     </nav>
