--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -39,7 +39,7 @@
       
        
         <section class="top-section">
-            <!-- <img src="../img/mobile_prototype/mobile-prototype.png" alt="Several screens of the mobile project."> -->
+            <img src="../img/arcana_mini/arcanamini_banner.png" alt="Several screens of the mobile project.">
             <h2>Arcana Mini App</h2>
             <h4>Spring 2023</h4>
         </section>
