Nav text styles
fixed navigation text styles

--- a/html/archive.html
+++ b/html/archive.html
@@ -21,15 +21,15 @@
     </header>
     <nav>
       <div class="nav-left">
-        <a href="../index.html"><h1>JG</h1></a>
+        <a class="no-underline" href="../index.html"><h1>JG</h1></a>
         <a href="../index.html"><img src="../img/cursor-white-hover.svg"></a>
       </div>
       <div class="nav-right">
         <ul>
-            <li class="checked"><a href="../index.html">Portfolio, </a></li>
-            <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
-            <li><a href="../html/responsiveweb.html">Responsive Web, </a></li>
-            <li><a href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+            <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
+            <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
+            <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
+            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
           <li><a href="../html/archive.html">Archive</a></li>
         </ul>
       </div>
