--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </header>
     <nav>
       <div class="nav-left">
-        <a href=""><h1>JG</h1></a>
+        <a class="no-underline" href=""><h1>JG</h1></a>
         <a href=""><img src="./img/cursor-white-hover.svg"></a>
       </div>
       <div class="nav-right">
         <ul>
-          <li class="checked"><a href="">Portfolio, </a></li>
-          <li><a href="./html/arcanamini.html">Arcana Mini App, </a></li>
-          <li><a href="./html/responsiveweb.html"">Responsive Web, </a></li>
-          <li><a href="./html/mobileprototype.html">Mobile Prototype, </a></li>
-          <li><a href="./html/archive.html">Archive</a></li>
+          <li><a href="">Portfolio, </a></li>
+          <li><a class="no-underline" href="./html/arcanamini.html">Arcana Mini App, </a></li>
+          <li><a class="no-underline" href="./html/responsiveweb.html"">Responsive Web, </a></li>
+          <li><a class="no-underline" href="./html/mobileprototype.html">Mobile Prototype, </a></li>
+          <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
         </ul>
       </div>
     </nav>
