--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -40,8 +40,11 @@
        
         <section class="top-section">
             <img src="../img/arcana_mini/arcanamini_banner.png" alt="Several screens of the mobile project.">
-            <h2>Arcana Mini App</h2>
-            <h4>Spring 2023</h4>
+            <div class="protect-title">
+              <h2>Arcana Mini App</h2>
+              <h4>Spring 2023</h4>
+            </div>
+            
         </section>
 
       <section id="intro">
