Started on condensed menu

--- a/index.html
+++ b/index.html
@@ -25,14 +25,23 @@
         <a href=""><img src="./img/cursor-white-hover.svg"></a>
       </div>
       <div class="nav-right">
-        <ul>
-          <li><a href="">Portfolio, </a></li>
-          <li><a class="no-underline" href="./html/arcanamini.html">Arcana Mini App, </a></li>
-          <li><a class="no-underline" href="./html/responsiveweb.html"">Responsive Web, </a></li>
-          <li><a class="no-underline" href="./html/mobileprototype.html">Mobile Prototype, </a></li>
-          <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
-        </ul>
+        
+
+        <div class="expanded">
+          <ul>
+            <li><a href="">Portfolio, </a></li>
+            <li><a class="no-underline" href="./html/arcanamini.html">Arcana Mini App, </a></li>
+            <li><a class="no-underline" href="./html/responsiveweb.html"">Responsive Web, </a></li>
+            <li><a class="no-underline" href="./html/mobileprototype.html">Mobile Prototype, </a></li>
+            <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
+          </ul>
+        </div>
+
+        <div class="condensed">
+          <button>Menu</button>
+        </div>
       </div>
+      
     </nav>
 
     <div class="body-box">
