--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -52,14 +52,13 @@
         </ul>
       </div>
        
-        <section class="top-section">
-            <img src="../img/arcana_mini/arcanamini_banner.png" alt="Several screens of the mobile project.">
-            <div class="protect-title">
-              <h2>Arcana Mini App</h2>
-              <h4>Spring 2023</h4>
-            </div>
-            
-        </section>
+      <section class="top-section">
+        <img src="../img/arcana_mini/arcanamini_banner.png" alt="Several screens of the mobile project.">
+        <div class="project-title">
+          <h2>Arcana Mini App</h2>
+          <h4>Spring 2023</h4>
+        </div> 
+      </section>
 
       <section id="intro">
         <div class="section-left">
