--- a/html/mobileprototype.html
+++ b/html/mobileprototype.html
@@ -52,11 +52,13 @@
         </ul>
       </div>
        
-        <section class="top-section">
-            <img src="../img/mobile_prototype/mobile-prototype.png" alt="Several screens of the mobile project.">
-            <h2>Mobile App Prototype</h2>
-            <h4>Fall 2022</h4>
-        </section>
+      <section class="top-section">
+        <img src="../img/mobile_prototype/mobile-prototype.png" alt="Several screens of the mobile project.">
+        <div class="project-title">
+          <h2>Mobile App Prototype</h2>
+          <h4>Fall 2022</h4>
+        </div>
+      </section>
 
       <section id="intro">
         <div class="section-left">
