--- a/html/responsiveweb.html
+++ b/html/responsiveweb.html
@@ -52,12 +52,13 @@
         </ul>
       </div>
        
-        <section class="top-section">
-            
-            <img src="../img/responsive_web/responsive-web-overview.png" alt="The home page of the web project.">
-            <h2>Responsive Website Project</h2>
-            <h4>Fall 2022</h4>
-        </section>
+      <section class="top-section">
+        <img src="../img/responsive_web/responsive-web-overview.png" alt="The home page of the web project.">
+        <div class="project-title">
+          <h2>Responsive Website Project</h2>
+          <h4>Fall 2022</h4>
+        </div>
+      </section>
 
       <section id="intro">
         <div class="section-left">
