--- a/html/mobileprototype.html
+++ b/html/mobileprototype.html
@@ -22,7 +22,7 @@
     <nav>
       <div class="nav-left">
         <a class="no-underline" href="../index.html"><h1>JG</h1></a>
-        <a href="../index.html"><img src="../img/cursor-white-hover.svg"></a>
+        <a href="../index.html"><img src="../img/cursor-hover.svg"></a>
       </div>
       <div class="nav-right">
         <div class="expanded">
