--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       
     </header>
-    <nav>
+    <nav class="index">
       <div class="nav-left">
         <a class="no-underline" href=""><h1>JG</h1></a>
         <a href=""><img src="./img/cursor-white-hover.svg"></a>
