--- a/html/archive.html
+++ b/html/archive.html
@@ -66,6 +66,18 @@
             <img src="../img/arcana_mini/arcanamini_banner.png">
             <div class="line"></div>
           </div>
+          <div class="project-title gallery-option-item" onclick="location.href='../html/voiceactorweb.html';">
+            <h3>Voice Actor Website</h3>
+            <p>Spring 2023</p>
+            <!-- <img src="../img/portfolio1/overview.png">  -->
+            <div class="line"></div>
+          </div>
+          <div class="project-title gallery-option-item" onclick="location.href='../html/portfolio1.html';">
+            <h3>First Portfolio Website</h3>
+            <p>Fall 2022</p>
+            <img src="../img/portfolio1/overview.png"> 
+            <div class="line"></div>
+          </div>
           <div class="project-title gallery-option-item" onclick="location.href='../html/responsiveweb.html';">
             <h3>Responsive Web</h3>
             <p>Fall 2022</p>
