back to top, text resizes
back to top button added. text sizes now grow and shrink responsively

--- a/html/portfolio1.html
+++ b/html/portfolio1.html
@@ -41,6 +41,9 @@
       </div>
     </nav>
 
+    <!-- BACK TO TOP BUTTON -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
+    
     <div class="body-box">
       <div id="menu-content" class="menu-content">
         <ul>
