--- a/html/archive.html
+++ b/html/archive.html
@@ -44,6 +44,9 @@
     </div>
   </nav>
 
+  <!-- BACK TO TOP BUTTON -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
+
   <div class="body-box">
     <div id="menu-content" class="menu-content">
       <ul>
@@ -193,6 +196,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js'></script>
   <script src="../script.js"></script>
+  <script src="../gallery.js"></script>
 </body>
 
 </html>
