--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       
     </nav>
 
+    <!-- BACK TO TOP BUTTON -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
+
     <div class="body-box">
       <div id="menu-content" class="menu-content">
         <ul>
