--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -30,7 +30,7 @@
             <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
             <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
             <li><a class="no-underline" href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -76,7 +76,7 @@
             </p>
             <p>
               This was a 2 person project developed over 7 weeks. My partner and I were responsible for creating the concept,
-               visual style, flow, and executed it through android studio and java. 
+               visual style, flow, and executed it through Android Studio and Java. 
             </p>
         </div>
       </section>
@@ -93,25 +93,25 @@
             
             
             <p>
-              The first week of this project we spent refining the app proposal and identity. We worked in figma to create 
+              The first week of this project we spent refining the app proposal and identity. We worked in Figma to create 
               a mood board and basic wireframes to capture the idea of the app. 
             </p>
             <img src="../img/arcana_mini/moodboard.png">
             <p>
-              Once our proposal was accepted, we worked the flow of the app. This was crucial because the structure of
-               our app in android studio would be informed by the flow and activities that the app needs to have. 
+              Once our proposal was accepted, we worked on the flow of the app. This was crucial because the structure of
+               our app in Android Studio would be informed by the flow and activities that the app needs to have. 
             </p>
             <div class="box-wrap">
               <img class="two-img" src="../img/arcana_mini/basic_wireframes.png" alt="An error prompt for deleting an account.">
               <img class="two-img" src="../img/arcana_mini/final_wireframes.png" alt="The share feature pop up menu.">
             </div>
             <p>
-              We also set up our git workspace in this first week so that we could collaborate on our code. We set up
-               two branches for ourselves and push our individual progress before merging to the main shared branch.
+              We also set up our Git workspace in this first week so that we could collaborate on our code. We set up
+               two branches for ourselves and pushed our individual progress before merging to the main shared branch.
             </p>
             <p>
               Here are some examples of how our work evolved over time. The calendar went through a few iterations of design,
-               and changed as it was implemented in android after testing it on a phone to see what worked best visually.
+               and changed as it was implemented in Android after testing it on a phone to see what worked best visually.
                 The onboarding also went through some changes, though in this case the design stayed virtually the same
                  but we added more content to it after deciding that the app needed a little more functionality. 
             </p>
@@ -144,11 +144,11 @@
           </p>
           <p>
             Fragments allow you to change the content of an activity by changing out chunks of content. This is the more 
-            common approach to structuring apps in android, but it is also a little more complex than what we were learning
+            common approach to structuring apps in Android, but it is also a little more complex than what we were learning
              at the beginning of this class. When we tried implementing them from the start, we found ourselves in a mess 
              of code and it was very counterproductive. We instead built the app out of regular activities and later refactored
-              it into fragments in one of the last weeks of the project. This was much easier because by that point we had a 
-              strong grasp of the android studio workflow.
+              it into fragments in one of the last weeks of the project. This was much easier, because by that point we had a 
+              strong grasp of the Android studio workflow.
           </p>
         </div>
       </section>
@@ -158,10 +158,10 @@
         </div>
         <div class="section-right">
             <p>
-              This project taught me a lot. I haven’t worked on an app before so the environment of android and the process
+              This project taught me a lot. I haven’t worked on an app before so the environment of Android and the process
                were unfamiliar to me. Beyond the technical side, the process of coming up with a profitable app idea was 
                very challenging and made me respect the work that goes into app development a lot more. 
-              I also learned a lot about using git to collaborate. I have used it before, but with each project I learn 
+              I also learned a lot about using Git to collaborate. I have used it before, but with each project I learn 
               something new. Also, I found that my partner’s approach to coding was different from mine. This meant that 
               if we each did separate work and tried to combine it, the code could get confusing. This ultimately taught 
               me more though and broadened my methodology.
