--- a/html/mobileprototype.html
+++ b/html/mobileprototype.html
@@ -30,7 +30,7 @@
             <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
             <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
             <li><a class="no-underline" href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+            <li><a href="../html/mobileprototype.html">Mobile Prototype</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -96,8 +96,8 @@
                 The first two images are different UI options we tried that had different interactions 
                 for adding in content. The third image is the first prototype we made, which 
                 notably split the process of adding a recipe into several pages to break down 
-                the flow into chunks and lessen the mental load. Despite this we found that 
-                adding ingredients individually was still very tasking. In our final iteration, 
+                the flow into chunks and lessen the mental load. Despite this, we found that 
+                adding ingredients individually was still very taxing. In our final iteration, 
                 the 4th image, we opted for a text area to make inputting ingredients as easy as possible.
             </p>
             <div class="box-row">
@@ -107,10 +107,10 @@
                 <img class="four-img" src="../img/mobile_prototype/manual4.png" alt="The final design.">
             </div>
             <p>
-                We then conducted user tests. We tested 9 people in total, ages 20-61, 
+                We then conducted user tests. We tested nine people in total, ages 20-61, 
                 including a Filipino family that matched our target demographic. We created a list of tasks 
                 for users to complete and a simple survey to ask them their opinions when they were done. 
-                4 tests were conducted online, which required extra steps to test wifi connectivity and share screens. 
+                Four tests were conducted online, which required extra steps to test wifi connectivity and share screens. 
                 Generally, our results showed that our styling was effective but that there were inconsistencies 
                 and functional errors that hindered the experience. 
             </p>
