--- a/html/responsiveweb.html
+++ b/html/responsiveweb.html
@@ -30,7 +30,7 @@
             <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
             <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
             <li><a href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
             <li><a class="no-underline"  href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -68,7 +68,10 @@
             <h4>Introduction</h1>
         </div>
         <div class="section-right">
-            <p>This was a 2 person project developed over the course of 5 weeks for a web development class I took in fall of 2022. The task was to create a fake company and design a fully responsive website for it. I had a leadership role in this project as the company identity was my idea and I directed most of the coding work. Here is a live link to the project: <a href="https://iat339p2.jasperjade.repl.co/index.html" target="_blank" rel="noopener noreferrer">https://iat339p2.jasperjade.repl.co/index.html</a></p>
+            <p>This was a 2 person project developed over the course of 5 weeks for a web development class I took in the 
+              fall of 2022. The task was to create a fake company and design a fully responsive website for it. I had 
+              a leadership role in this project since the company identity was my idea, and I directed most of the coding work.
+               Here is a live link to the project: <a href="https://iat339p2.jasperjade.repl.co/index.html" target="_blank" rel="noopener noreferrer">https://iat339p2.jasperjade.repl.co/index.html</a></p>
         </div>
       </section>
       <section id="process">
