--- a/html/archive.html
+++ b/html/archive.html
@@ -33,7 +33,7 @@
           <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
           <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
           <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
-          <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+          <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
           <li><a href="../html/archive.html">Archive</a></li>
         </ul>
       </div>
@@ -69,12 +69,12 @@
             <img src="../img/arcana_mini/arcanamini_banner.png">
             <div class="line"></div>
           </div>
-          <div class="project-title gallery-option-item" onclick="location.href='../html/voiceactorweb.html';">
+          <!-- <div class="project-title gallery-option-item" onclick="location.href='../html/voiceactorweb.html';">
             <h3>Voice Actor Website</h3>
             <p>Spring 2023</p>
-            <!-- <img src="../img/portfolio1/overview.png">  -->
+            <img src="../img/portfolio1/overview.png"> 
             <div class="line"></div>
-          </div>
+          </div> -->
           <div class="project-title gallery-option-item" onclick="location.href='../html/portfolio1.html';">
             <h3>First Portfolio Website</h3>
             <p>Fall 2022</p>
