--- a/html/portfolio1.html
+++ b/html/portfolio1.html
@@ -30,7 +30,7 @@
             <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
             <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
             <li><a class="no-underline" href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
