--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -101,7 +101,7 @@
               Once our proposal was accepted, we worked on the flow of the app. This was crucial because the structure of
                our app in Android Studio would be informed by the flow and activities that the app needs to have. 
             </p>
-            <div class="box-wrap">
+            <div class="two-img-box">
               <img class="two-img" src="../img/arcana_mini/basic_wireframes.png" alt="An error prompt for deleting an account.">
               <img class="two-img" src="../img/arcana_mini/final_wireframes.png" alt="The share feature pop up menu.">
             </div>
@@ -115,13 +115,13 @@
                 The onboarding also went through some changes, though in this case the design stayed virtually the same
                  but we added more content to it after deciding that the app needed a little more functionality. 
             </p>
-            <div class="box-wrap">
-              <img class="two-img" src="../img/arcana_mini/calendar-wireframes.png" alt="An error prompt for deleting an account.">
-              <img class="two-img img-onboarding" src="../img/arcana_mini/archive.png" alt="The share feature pop up menu.">
+            <div class="two-img-box">
+              <img class="arcana-img3" src="../img/arcana_mini/calendar-wireframes.png" alt="An error prompt for deleting an account.">
+              <img class="arcana-img4" src="../img/arcana_mini/archive.png" alt="The share feature pop up menu.">
             </div>
-            <div class="box-wrap">
-                <img class="two-img" src="../img/arcana_mini/onboarding-wireframe.png" alt="An error prompt for deleting an account.">
-                <img class="two-img img-onboarding" src="../img/arcana_mini/onboarding.gif" alt="The share feature pop up menu.">
+            <div class="two-img-box">
+                <img class="arcana-img1" src="../img/arcana_mini/onboarding-wireframe.png" alt="An error prompt for deleting an account.">
+                <img class="arcana-img2" src="../img/arcana_mini/onboarding.gif" alt="The share feature pop up menu.">
             </div>
         </div>
       </section>
@@ -164,7 +164,7 @@
               I also learned a lot about using Git to collaborate. I have used it before, but with each project I learn 
               something new. Also, I found that my partner’s approach to coding was different from mine. This meant that 
               if we each did separate work and tried to combine it, the code could get confusing. This ultimately taught 
-              me more though and broadened my methodology.
+              me more and broadened my methodology.
             </p>
         </div>
       </section>
