--- a/html/archive.html
+++ b/html/archive.html
@@ -157,29 +157,29 @@
         <div class="gallery-options">
           <div onclick="setPhotos(1);" class="gallery-option-item">
             <h4>into the fog</h4>
-            <img src="../img/Gallery/fog/fog1.jpg">
+            <img src="../img/gallery/fog/fog1.jpg">
             <div class="line"></div>
           </div>
           <div onclick="setPhotos(2);" class="gallery-option-item">
             <h4>insects</h4>
-            <img src="../img/Gallery/insects/gallery1-3x.jpg">
+            <img src="../img/gallery/insects/gallery1-1x.jpg">
             <div class="line"></div>
           </div>
           <div onclick="setPhotos(3);" class="gallery-option-item">
             <h4>a place called home</h4>
-            <img src="../img/Gallery/home/home1.jpg"> 
+            <img src="../img/gallery/home/home1.jpg"> 
             <div class="line"></div>
           </div>
             
           <div onclick="setPhotos(4);" class="gallery-option-item">
             <h4>snow</h4>
-            <img src="../img/Gallery/snow/snow1.jpg"> 
+            <img src="../img/gallery/snow/snow1.jpg"> 
             <div class="line"></div>
           </div>
 
           <div onclick="setPhotos(5);" class="gallery-option-item">
             <h4>monochrome</h4>
-            <img src="../img/Gallery/bw/bw1.jpg"> 
+            <img src="../img/gallery/bw/bw1.jpg"> 
             <div class="line"></div>
           </div>
         </div>
