--- a/html/mobileprototype.html
+++ b/html/mobileprototype.html
@@ -119,7 +119,7 @@
                 Error prompts are very important because it helps users know the system’s status and recover from errors. 
                 The share function aids our main goal of passing down recipes.
             </p>
-            <div class="box-wrap">
+            <div class="two-img-box">
                 <img class="two-img" src="../img/mobile_prototype/errorPrompt.png" alt="An error prompt for deleting an account.">
                 <img class="two-img" src="../img/mobile_prototype/share.png" alt="The share feature pop up menu.">
             </div>
