--- a/html/portfolio1.html
+++ b/html/portfolio1.html
@@ -88,7 +88,7 @@
             <p>I then made wireframes. The wireframe below shows the layout I chose for the site, and below 
                 it are two alternative versions of the header I considered.</p>
             <img src="../img/portfolio1/wireframe3.png">
-            <div class="box-wrap">
+            <div class="two-img-box">
               <img class="two-img" src="../img/portfolio1/wireframe2.png" alt="An error prompt for deleting an account.">
               <img class="two-img" src="../img/portfolio1/wireframe1.png" alt="The share feature pop up menu.">
             </div>
