--- a/html/responsiveweb.html
+++ b/html/responsiveweb.html
@@ -56,7 +56,7 @@
       </div>
        
       <section class="top-section">
-        <img src="../img/responsive_web/responsive-web-overview.png" alt="The home page of the web project.">
+        <img class="img-border" src="../img/responsive_web/responsive-web-overview.png" alt="The home page of the web project.">
         <div class="project-title">
           <h2>Responsive Website Project</h2>
           <h4>Fall 2022</h4>
@@ -89,7 +89,7 @@
             <img src="../img/responsive_web/GitKraken.png" alt="An overview of our GitKraken use.">
 
             <p>Making the site responsive was a huge focus. We used flexboxes to get the site content to rearrange, and used a few media queries to break the content at specific viewport resolutions.</p>
-            <div class="box-wrap">
+            <div class="two-img-box">
                 <img class="two-img" src="../img/responsive_web/ezgif-1-1ece9a7372.gif" alt="Responsive demonstration.">
                 <img class="two-img" src="../img/responsive_web/ezgif-1-4c4a71043a.gif" alt="Responsive demonstration.">
             </div>
