--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="video-wrapper">
-      <video  autoplay muted loop poster="">
+      <video playsinline autoplay muted loop poster="">
         <source src="./img/bgvideo.mp4" type="video/mp4">
       </video>
     </div>
@@ -87,8 +87,9 @@
             understanding within ourselves. Even the smallest interactions we have can have lasting and 
             meaningful impacts. As a designer, I hope to create beautiful interfaces and experiences that
              people can find pleasure in, down to the smallest details, because it’s the little things that count.</p>
-          <p>contact: jaspergass@outlook.com</p>
+          <p>contact: <a href="mailto:jaspergass@outlook.com">jaspergass@outlook.com</a></p>
         </div>
+        <hr />
       </section>
       <section id="Introduction">
         <div class="section-left">
@@ -123,7 +124,7 @@
              because the visual style from the camcorder is too rough for the clean and modern style I was aiming for.
               I filmed new footage on my XXXX camera. Below is what the site looked like using the placeholder footage,
                and what it looked like when I was editing the new clips in Adobe Premiere.</p>
-          <div class="box-wrap">
+          <div class="two-img-box">
             <img class="two-img" src="./img/placeholder_bg.gif" alt="An error prompt for deleting an account.">
             <img class="two-img" src="./img/videoEditing.png" alt="The share feature pop up menu.">
           </div>
@@ -149,7 +150,7 @@
              the code I managed to make it do what I wanted. In the future, I would love to make my own from scratch to
               improve my coding skills and get the exact behaviour I want.</p>
 
-          <div class="box-wrap">
+          <div class="two-img-box">
             <img class="two-img" src="./img/PortfolioResponsiveness.gif" alt="An error prompt for deleting an account.">
             <img class="two-img" src="./img/portfolioGallery.gif" alt="The share feature pop up menu.">
           </div>
