--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -168,6 +168,23 @@
             </p>
         </div>
       </section>
+      <section id="reflection">
+        <div class="section-left">
+            <h4>Gallery</h4>
+        </div>
+        <div class="section-right">
+            <div class="box-wrap">
+              <img class="three-img" src="../img/arcana_mini/home.png" alt="The app home page.">
+              <img class="three-img" src="../img/arcana_mini/settingspage.png" alt="The app settings page.">
+              <img class="three-img" src="../img/arcana_mini/searchview.png" alt="The search function in the guidebook.">
+            </div>
+            <div class="box-wrap">
+              <img class="three-img" src="../img/arcana_mini/cardinfo.png" alt="A card information page.">
+              <img class="three-img" src="../img/arcana_mini/reflection.png" alt="Adding a new reflection.">
+              <img class="three-img" src="../img/arcana_mini/reflectionmode.png" alt="The timed reflection mode.">
+            </div>
+        </div>
+      </section>
     </div>
     
    
