--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
              I wanted something simple, refined, and easy to understand. Thats why I chose this very simple navigation
               system and structure for all my pages. To make my site stand out, the visual complexity of the video and
                the home page text effects balance out the simplicity of the website’s structure.  </p>
-          <img src="./img/portfolioMockups.png">
+          <img src="./img/portfoliomockups.png">
           <p>In order to make my cursor have a unique shape and mixed blend mode effect through CSS, it needed to be 
             an actual object on the page instead of the normal cursor. To achieve this, I hid the real cursor and 
             created an object on the page that moves using javascript and applied the blend mode. </p>
