Begun wax dog page, home page

--- a/html/archive.html
+++ b/html/archive.html
@@ -30,10 +30,7 @@
     <div class="nav-right">
       <div class="expanded">
         <ul>
-          <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-          <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
-          <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
-          <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
+          <li><a class="no-underline" href="../index.html">Home</a></li>
           <li><a href="../html/archive.html">Archive</a></li>
         </ul>
       </div>
@@ -50,10 +47,7 @@
   <div class="body-box">
     <div id="menu-content" class="menu-content">
       <ul>
-        <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-        <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
-        <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
-        <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+        <li><a class="no-underline" href="../index.html">Home</a></li>
         <li><a href="../html/archive.html">Archive</a></li>
       </ul>
     </div>
