--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -59,7 +59,7 @@
         <img src="../img/portfolio1/overview.png" alt="Several screens of the mobile project.">
         <div class="project-title">
           <h2>Portfolio Website</h2>
-          <h4>Summer 2023</h4>
+          <h4>Summer 2023 - Present</h4>
         </div> 
       </section>
 
