waxdog page content + header

--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -56,7 +56,7 @@
       </div>
        
       <section class="top-section">
-        <img class="img-border" src="../img/responsive_web/responsive-web-overview.png" alt="The home page of the web project.">
+        <img src="../img/waxdog/waxdog-header.png" alt="The home page of the web project.">
         <div class="project-title">
           <h2>Wax Dog Sound Lab</h2>
           <h4>Spring 2024</h4>
@@ -81,6 +81,17 @@
                 <img class="two-img" src="../img/waxdog/drums-x1.JPG" srcset="../img/waxdog/drums-x2.jpg 2x, ../img/waxdog/drums-x3.jpg 3x" alt="Image of drumkit before colour correcting">
                 <img class="two-img" src="../img/waxdog/drums2-x1.JPG" srcset="../img/waxdog/drums2-x2.jpg 2x, ../img/waxdog/drums2-x3.jpg 3x" alt="Image of drumkit after colour correcting">
             </div>
+            <p>Now that I had the images I wanted to use for the site, I began wireframing. One key thing here was that the client wanted a black website. This was new to me so I spent some time finding inspiration. The client also has a very strong visual sense of character which I wanted to include while maintaining simplicity. For this, I wanted to add a scrolling bar at the top to mimic a scrolling LED sign. I felt this was a simple element that added the fun character that this website needed.</p>
+            <img src="../img/waxdog/slider.gif">
+          </div>
+      </section>
+      <section id="challenges">
+        <div class="section-left">
+            <h4>Challenges</h1>
+        </div>
+        <div class="section-right">
+          <p>Because the scope of this project was fairly small I did not run into many issues, but there were a few key challenges. One was working with a static github page. Ideally, I would have liked to have a email form on the website so that potential clients could send an email message directly from the page, but github pages unfortunately do not support this action. To compromise, I added a button that creates a new email draft directly.</p>
+          <p>Another challenge was organizing all of the content on one page. I decided that having multiple pages for this project would overcomplicate the flow. Having all of the information on one page keeps the experience simple and easy to navigate. However, this also meant I had to be careful about how I organized the content to make sure it wasn't too long and annoying to scroll through. In the end, I managed to reduce the content and organize it such that the page is easy to view and understand.</p>
         </div>
       </section>
       <section id="reflection">
