--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -99,7 +99,7 @@
             <h4>Reflection</h4>
         </div>
         <div class="section-right">
-          <p>reflection.</p>
+          <p>Though it was short, this was one of the most enjoyable projects I have done to date. Working closely with a client to realize their ideas is a very engaging and fun process. It is highly rewarding to also be able to complete a project like this completely on my own because I can be in control of everything and feel proud of the final product. In the future, I would love to continue doing small projects like this to hone my skills.</p>
         </div>
       </section>
     </div>
