Removed condensed menu
no need if nav bar only has 2 items.

--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -27,17 +27,14 @@
       <div class="nav-right">
         <div class="expanded">
           <ul>
-            <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-            <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
-            <li><a class="no-underline" href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
+            <li><a class="no-underline" href="../index.html">Home</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
 
-        <div class="condensed">
+        <!-- <div class="condensed">
           <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div>
+        </div> -->
       </div>
     </nav>
 
@@ -45,15 +42,12 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="body-box">
-      <div id="menu-content" class="menu-content">
+      <!-- <div id="menu-content" class="menu-content">
         <ul>
-          <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-          <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
-          <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
-          <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+          <li><a class="no-underline" href="../index.html">Home</a></li>
           <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
         </ul>
-      </div>
+      </div> -->
        
       <section class="top-section">
         <img src="../img/arcana_mini/arcanamini_banner.png" alt="Several screens of the mobile project.">
