--- a/html/arcanamini2.html
+++ b/html/arcanamini2.html
@@ -27,17 +27,14 @@
       <div class="nav-right">
         <div class="expanded">
           <ul>
-            <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-            <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
-            <li><a class="no-underline" href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
+            <li><a class="no-underline" href="../index.html">Home</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
 
-        <div class="condensed">
+        <!-- <div class="condensed">
           <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div>
+        </div> -->
       </div>
     </nav>
 
@@ -45,20 +42,17 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="body-box">
-      <div id="menu-content" class="menu-content">
+      <!-- <div id="menu-content" class="menu-content">
         <ul>
-          <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-          <li><a href="../html/arcanamini.html">Arcana Mini App, </a></li>
-          <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
-          <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
+          <li><a class="no-underline" href="../index.html">Home</a></li>
           <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
         </ul>
-      </div>
+      </div> -->
        
       <section class="top-section">
         <img class="img-border" src="../img/arcana_mini_2/Header-3x.png" srcset="../img/arcana_mini_2/Header-2x.jpg 2x, ../img/arcana_mini_2/Header-3x.png 3x" alt="Several screens of the mobile project.">
         <div class="project-title">
-          <h2>Arcana Mini App 2.0</h2>
+          <h2>Arcana Mini App 2</h2>
           <h4>Fall 2023 - Spring 2024</h4>
         </div> 
       </section>
