--- a/html/portfolio1.html
+++ b/html/portfolio1.html
@@ -26,18 +26,15 @@
       </div>
       <div class="nav-right">
         <div class="expanded">
-          <ul>
-            <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-            <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
-            <li><a class="no-underline" href="../html/responsiveweb.html"">Responsive Web, </a></li>
-            <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype</a></li>
-            <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
-          </ul>
-        </div>
+            <ul>
+              <li><a class="no-underline" href="../index.html">Home</a></li>
+              <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
+            </ul>
+          </div>
 
-        <div class="condensed">
+        <!-- <div class="condensed">
           <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div>
+        </div> -->
       </div>
     </nav>
 
@@ -45,16 +42,13 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
     
     <div class="body-box">
-      <div id="menu-content" class="menu-content">
-        <ul>
-          <li><a class="no-underline" href="../index.html">Portfolio, </a></li>
-          <li><a class="no-underline" href="../html/arcanamini.html">Arcana Mini App, </a></li>
-          <li><a class="no-underline" href="../html/responsiveweb.html">Responsive Web, </a></li>
-          <li><a class="no-underline" href="../html/mobileprototype.html">Mobile Prototype, </a></li>
-          <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
-        </ul>
-      </div>
-       
+        <!-- <div id="menu-content" class="menu-content">
+            <ul>
+              <li><a class="no-underline" href="../index.html">Home</a></li>
+              <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
+            </ul>
+          </div>
+        -->
       <section class="top-section">
         <img src="../img/portfolio1/overview.png" alt="Several screens of the mobile project.">
         <div class="project-title">
